--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,3 +1,11 @@
+@media screen and (min-width: 1024px) {
+    body {
+        width: 1024px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 .row {
     width: 100%;
 }
@@ -7,7 +15,7 @@
 }
 
 .col-4 {
-    width: 33.3%;
+    width: 30%;
 }
 
 .header {
@@ -29,14 +37,72 @@
 }
 
 .cover {
-    width: 80%;
+    width: 100%;
+    max-width: 1024px;
+    padding: 20px 0;
+}
+
+.workTitle {
+    color: blue;
 }
 
 .projImage {
-    width: 30%;
+    width: 100%;
+}
+
+.project {
+    padding-right: 5%;
+}
+
+.title {
+    text-align: center;
+    font-size: 35px;
+}
+
+.desc {
+    text-align: center;
+}
+
+.desc a {
+    color: black;
+    text-decoration: none;
+}
+
+.project:last-of-type {
+    padding-right: 0;
 }
 
 .header, .projects {
     display: flex;
     flex-wrap: wrap;
+}
+
+footer {
+    text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+    h1 {
+        font-size: 24px;
+    }
+
+    .project {
+        width: 100%
+    }
+
+    .title {
+        font-size: 24px;
+    }
+
+    .desc {
+        font-size: 18px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    h1 {
+        font-size: 36px;
+    }
+
+
 }
