--- a/or/css/style.css
+++ b/or/css/style.css
@@ -160,6 +160,7 @@ ul {
   float: left;
   padding: 10px;
   width: 200px;
+  height: 200px;
   display: none;
 }
 
@@ -218,4 +219,8 @@ span {
   .biopic {
     display: block;
   }
+}
+
+#projects img {
+    width: 200px;
 }
